# smb_bringup_SOS

./: CMakeLists.txt  package.xml
launch/: SOS_exploration_tested.launch.py  SOS_sim_challenge.launch.py  SOS_tested_keyboard.launch.py  TODO_STUDENTS_smb_real.launch.py  smb_sim_exploration.launch.py
smb_bringup/: challenge.py
